# PsyNeuLink

./: .appveyor.yml  .buildinfo  .gitattributes  .gitignore  .travis.yml  AGENTS.md  AGT.html  AGTControlMechanism.html  AdaptiveIntegrator.html  AdaptiveMechanism.html  AdaptiveMechanisms.html  AutoAssociativeLearningMechanism.html  AutoAssociativeProjection.html  AutodiffComposition.html  BasicsAndPrimer.html  BasicsAndSampler.html  BeukersNBackModel.html  BeukersNBackModel_NB.html  BotvinickConflictMonitoringModel.html  BustamanteStroopXORLVOCModel.html  CONTRIBUTING.md  CONVENTIONS.md  Cohen_HustonModel.html  CombinationFunctions.html  Comparator.html  ComparatorMechanism.html  Compilation.html  Component.html  Components.html  Composition.html  CompositionFunctionApproximator.html  CompositionInterfaceMechanism.html  Compositions.html  Condition.html  Context.html  ContrastiveHebbianMechanism.html  ContributorsGuide.html  ControlMechanism.html  ControlMechanisms.html  ControlProjection.html  (+175 more)
.doctrees/: AdaptiveIntegrator.doctree  Comparator.doctree  ControlMechanism.doctree  ControlSignal.doctree  DDM.doctree  DefaultControlMechanism.doctree  EVCMechanism.doctree  InputState.doctree  Log.doctree  Mapping.doctree  Mechanism.doctree  MonitoringMechanism.doctree  OutputState.doctree  ParameterState.doctree  Preferences.doctree  Process.doctree  ProcessingMechanism.doctree  Projection.doctree  Run.doctree  State.doctree  System.doctree  Transfer.doctree  Utilities.doctree  index.doctree
.github/: dependabot.yml
.github/workflows/: codeql.yml  compare-comment.yml  notebooks-gh.yml  pnl-ci-docs.yml  pnl-ci.yml  pnl-docs-compare.yml  pnl-docs.yml  prepare-release.yml  test-release.yml
.idea.BAK/: modules.xml  workspace.xml
.idea.BAK/runConfigurations/: META_Test_Script.xml  _Scratch_Pad.xml
.ipynb_checkpoints/: PsyNeuLink Tutorial-checkpoint.ipynb
Functions/: Function.py  Process.py  ShellClasses.py  System.py  Utility.py  __init__.py
Functions/MechanismStates/: MechanismInputState.py  MechanismOutputState.py  MechanismParameterState.py  MechanismState.py
Functions/Mechanisms/: AdaptiveIntegrator.py  DDM.py  EVCMechanism.py  EriksenFlanker.py  LinearLayer.py  LinearMechanism.py  Mechanism.py  SigmoidLayer.py  StimulusPrediction.py  SystemControlMechanism.py  SystemDefaultControlMechanism.py
Functions/Projections/: ControlSignal.py  LearningSignal.py  Mapping.py  Projection.py
Functions/States/: InputState.py  MechanismInputState.py  MechanismOutputState.py  MechanismParameterState.py  OutputState.py  ParameterState.py  State.py
Globals/: Defaults.py  Keywords.py  Log.py  Main.py  Registry.py  TimeScale.py
Globals/Preferences/: FunctionPreferenceSet.py  MechanismPreferenceSet.py  PreferenceSet.py
Matlab/: README.md  RunControlAdaptationSims.m  RunSanityChecks.m  RunTaskSwitchingSims.m  TransferSimulation.mat  readme_rst.txt
Matlab/+EVC/: CCost.m  CtrlSigAdapt.m  CtrlSignal.m  EVCFnc.m  EVCModel.m  EVCPlot.m  HelperFnc.m  IntensityAdapt.m  (+4 more)
Output/: EVC System Test Script OUTPUT 2  EVC System Test Script Ouput
PsyNeuLink/: Composition.py  __init__.py  composition.py  composition_tests.py  llvm.py  mechanismGenerator.py
PsyNeuLink.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Scripts/: Aida.py  Botvinick_conflict.py  Botvinick_conflict_monitoring_Figure1.py  CHL-Vicky.py  COMPOSITE TEST SCRIPT.py  ComparatorTestScript.py  Conflict_new.py  Cyclic System Test Script.py  DDM Learning Test Script.py  DDM Test Script (simple).py  DDM Test Script.py  Documentation Examples Script.py  EVC System Experiment Test Script.py  EVC System Gratton Test Script.py  EVC System Laming Validation Test Script (Minstrel (3)'s conflicted copy 2016-10-25).py  EVC System Laming Validation Test Script COPY.py  EVC System Laming Validation Test Script OLD.py  EVC System Laming Validation Test Script with Custom Fn.py  EVC System Laming Validation Test Script.py  EVC System Test Script (with MPI).py  EVC System Test Script with Profiler.py  EVC System Test Script.py  EriksenFlanker Test Script.py  InceptionTestScript_JDC.py  Integrator-test-script.py  Jenkins META Test Script.py  Laura Stroop w EVC.py  Laura Stroop.py  Learning Signal Test Script.py  Lena Rumelhart script.py  Lena XOR.py  LinearLayer Test Script.py  MARKUS TEST SCRIPT.py  META Test Script.py  Markus EVC Control Script.py  Markus Stroop.py  Markus_bidirectional_Stroop.py  Markus_bidirectional_Stroop_2units.py  Markus_bidirectional_horserace.py  Markus_bidirectional_horserace_May16.py  (+59 more)
_downloads/: Cohen_Huston1994.py  Cohen_Huston1994_horse_race.py  GilzenratModel.py  Nieuwenhuis2005Model.py  PsyNeuLink Tutorial.ipynb
_sources/: AGTControlMechanism.rst.txt  AdaptiveMechanism.txt  AdaptiveMechanisms.rst.txt  AutoAssociativeLearningMechanism.rst.txt  AutodiffComposition.rst.txt  BasicsAndPrimer.rst.txt  BotvinickConflictMonitoringModel.rst.txt  Cohen_HustonModel.rst.txt  Comparator.txt  ComparatorMechanism.txt  Compilation.rst.txt  Component.txt  Composition.rst.txt  CompositionFunctionApproximator.rst.txt  CompositionInterfaceMechanism.rst.txt  Context.rst.txt  ContrastiveHebbianMechanism.rst.txt  ControlMechanism.rst.txt  ControlMechanism.txt  ControlMechanisms.rst.txt  ControlSignal.rst.txt  ControlSignal.txt  Core.rst.txt  DDM.txt  DistributionFunctions.rst.txt  EVCControlMechanism.rst.txt  EVCMechanism.txt  Function.txt  Functions.rst.txt  GatingMechanism.rst.txt  GatingProjection.rst.txt  InputPort.rst.txt  IntegratorMechanism.txt  IntegratorMechanisms.rst.txt  KWTA.rst.txt  Keywords.rst.txt  KohonenMechanism.rst.txt  LCControlMechanism.rst.txt  Learning.txt  LearningFunctions.rst.txt  (+42 more)
_static/: documentation_options.js
conda insall script/: pnldocs.yml
docs/: Makefile
jenkins/: jenkins_meta_test.sh  reference_output.txt  test_output.txt
psyneulink/: __init__.py  _typing.py  _version.py  composition.py  conftest.py  signaltransforms.py
tests/: conftest.py  test_fail.py  test_pytest.py
tutorial/: PsyNeuLink Tutorial.ipynb  PsyNeuLink_Tutorial.ipynb
ys_test/: main.py  params.py
(+2615 files in other folders)
